// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CircleSkeleton /> should render a circle skeleton 1`] = `
<CircleSkeleton
  showSkeleton={true}
  size="large"
>
  <Styled(styled.span)
    size="large"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "eUXSek",
            "rules": Array [
              "
  animation: ",
              Keyframes {
                "id": "sc-keyframes-jXsTbE",
                "inject": [Function],
                "name": "jXsTbE",
                "rules": Array [
                  "@-webkit-keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                  "@keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                ],
                "toString": [Function],
              },
              " .8s linear infinite alternate;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: ",
              "#E1E6EB",
              ";
  border: 1px solid ",
              "#E1E6EB",
              ";
  display: inline-flex;
",
              "
  border-radius: 50%;
  line-height: 1rem;

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(styled.span)",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
          ],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="large"
    >
      <span
        className="eUXSek"
        size="large"
      />
    </StyledComponent>
  </Styled(styled.span)>
</CircleSkeleton>
`;

exports[`<CircleSkeleton /> should render a circle skeleton with set size 1`] = `
<CircleSkeleton
  showSkeleton={true}
  size="small"
>
  <Styled(styled.span)
    size="small"
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "kIOXQD",
            "rules": Array [
              "
  animation: ",
              Keyframes {
                "id": "sc-keyframes-jXsTbE",
                "inject": [Function],
                "name": "jXsTbE",
                "rules": Array [
                  "@-webkit-keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                  "@keyframes jXsTbE{0%{opacity:.45;}to{opacity:.9;}}",
                ],
                "toString": [Function],
              },
              " .8s linear infinite alternate;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: ",
              "#E1E6EB",
              ";
  border: 1px solid ",
              "#E1E6EB",
              ";
  display: inline-flex;
",
              "
  border-radius: 50%;
  line-height: 1rem;

  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(styled.span)",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
          ],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      size="small"
    >
      <span
        className="kIOXQD"
        size="small"
      />
    </StyledComponent>
  </Styled(styled.span)>
</CircleSkeleton>
`;
